--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/iswahyudipk/coba",
+  "homepage": "https://github.com/iswahyudipk/coba/",
   "name": "tasktrek",
   "private": true,
   "version": "0.0.0",
